Conformance/Compiler/testsuite/src/tests/a_cangjie_grammar_summary/01_lexical_grammar/01_comments/a01/test_a01_05.cj

/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
 * This source file is part of the Cangjie project, licensed under Apache-2.0
 * with Runtime Library Exception.
 * 
 * See https://cangjie-lang.cn/pages/LICENSE for license information.
 */

/*
  @Name:        A_01_01_a01_05

  @Level:         1
  @Assertion:   A.1.1(1)
                DelimitedComment
                    : '/*' ( DelimitedComment | . )*? '*/'
                    ;
  @Description: Check delimited comment syntax
  @Comment:     Auto-generated tests by gen_comments_tests_a01.py with seed = 1
  @Mode:        run
  @Negative:    no
  @Structure:   single
*/
import utils.assert.Assert

/*  */

main() { /* <T>):Option <T> public func sleep for more flexibly. public/* literal. The closer an exception E1is not be an argument Int32, the last section
/*  */
 */length2 :Int32 =32// The functions by import
/*  */

 */
  var t1: Int64 = 123 /* /* A=>0 case Year(y) |Month(y, m)=>y// error: expression is followed for
"npms": { // ... ğœ•ğ‘¦ ğœ•ğ‘¥ğ‘›ââŸâŸâŸâŸâŸ */Xm) If the following example The generic function or
 */
  Assert.equals(123, t1)
  return 0
}

/* /* /* /* relationships (see Function definitions and @C 3.Lambda expression () // 'intNum' is visible to/* /* /* one)) The wildcard

Int32. let x=B()Atomic operation beyond the
/*  *//*  */

input!" ) // test =derived1 isDerived1 // b.cj package Top-level Differentiable
/*  */macros, the compiler automatically released to ignore the asoperator
1.3.1 Integer a static member functions are visible to represent the floor of C
 */
 *//* act in a
 */
 */
()when the imported top-level definition, which is made according to represent it is a class. }

 */
()() :Unit

/*  */
/*  */ */
 */ */
